mockiato_codegen/tests/ui/malformed-mockable-attr.rs
#![feature(plugin)]
#![plugin(mockiato_codegen)]

#[mockable("Bar")]
trait Foo {}
